[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/spider.png" type="Texture" id=1]
[ext_resource path="res://players/testSpider.gd" type="Script" id=2]
[ext_resource path="res://players/testSpiderLeg.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 62.181

[node name="testSpider" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="spider" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FrontLegs" type="Node2D" parent="."]

[node name="Leg" parent="FrontLegs" instance=ExtResource( 3 )]
position = Vector2( 17.2842, -0.785679 )

[node name="Leg2" parent="FrontLegs" instance=ExtResource( 3 )]
position = Vector2( 32.2115, -0.785679 )

[node name="Leg3" parent="FrontLegs" instance=ExtResource( 3 )]
position = Vector2( 29.0689, 7.85645 )

[node name="Leg4" parent="FrontLegs" instance=ExtResource( 3 )]
position = Vector2( 38.8895, 7.85645 )

[node name="BackLegs" type="Node2D" parent="."]

[node name="Leg8" parent="BackLegs" instance=ExtResource( 3 )]
position = Vector2( -43.9964, -1.96415 )
flipped = false

[node name="Leg7" parent="BackLegs" instance=ExtResource( 3 )]
position = Vector2( -29.069, -1.96415 )
flipped = false

[node name="Leg6" parent="BackLegs" instance=ExtResource( 3 )]
position = Vector2( -32.2117, 6.67798 )
flipped = false

[node name="Leg5" parent="BackLegs" instance=ExtResource( 3 )]
position = Vector2( -22.391, 6.67798 )
flipped = false

[node name="LowMidCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 180 )
collision_mask = 3

[node name="HighMidCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 150 )
collision_mask = 3

[node name="FrontCheck" type="RayCast2D" parent="."]
position = Vector2( 115.097, 0 )
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 3

[node name="BackCheck" type="RayCast2D" parent="."]
position = Vector2( -105.083, 0 )
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 3
